test/runnable/nested_import.nt
module nested_import;

extern(C) void assert(bool);

int print(string s) { assert(s == ""); return 5; }

void foo() {
    import neat.runtime : print;
    print("Hello World");
}

void main() {
    foo;
    assert(print("") == 5);
}
