test/fail_compilation/either.nt
module either;

macro import neat.macros.assert;

 void main() {
     (string | int) e = "foo";
     assert(e.case(string s: 1) == 1);
 }
